<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">课程表</string>
	<string name="autoMute">上课自动静音</string>
	<string name="addClass">添加课程</string>
	<string name="add">添加</string>
	
    <string name="backupSuccess">备份成功</string>
    <string name="backupFailure">备份失败</string>
    
    <string name="classNameHint">课程名称</string>
	<string name="classTime">时间</string>
	<string name="contactInformation">更加快捷的反馈方式:\nQQ:873037232\n微信:RtuGeek</string>
	<string name="clearClasses">清空课程</string>
	<string name="clearNotes">清空笔记</string>
	<string name="connectNetwork">获取新闻失败,请连接网络</string>
    <string name="cloudNoneFile">云端不存在备份文件</string>
	<string name="classTimeSet">上课时间设置</string>
	<string name="classRemind">每日提醒</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="clearnote">清空笔记</string>
	
	<string name="deleteClass">删除课程</string>
	<string name="deleteNote">删除笔记</string>
	<string name="di">第</string>
	
	<string name="everyDayClasses">每日课程数</string>
	<string name="en">嗯</string>
	<string name="enterYear">选择入学年份</string>
	<string name="errorData">下载数据异常</string>
	<string name="exitSuccess">退出成功!</string>
	
	<string name="feedback">反馈</string>
	<string name="fileNotExited">备份文件不存在!</string>
	<string name="fileNotExited1">文件不存在!</string>
	
	<string name="inputClassName">输入课程名</string>
	<string name="inputPlace">输入地点</string>
	<string name="inputHint">请输入ID号</string>
	<string name="inputTeacher">输入授课老师姓名</string>
	<string name="isBackupCover">将会覆盖云端原有的备份数据,是否继续？</string>
    <string name="isSyncCover">将会覆盖本地原有的数据,完成后需自行重启软件,是否继续？</string>
    <string name="isClearClasses">是否清空课程?</string>
	<string name="isClearNotes">是否清空笔记?</string>
	
	<string name="loginFailure">登陆失败,请重新登陆</string>
	<string name="location">漳州</string>
	
	<string name="noName">课程名不能为空!</string>
	
	<string name="tickerTextUp">上课咯,帮你调整为静音模式.</string>
	<string name="tickerTextDown">下课的咯!赶紧玩起手机.</string>
	<string name="timeLong">时长:</string>
	<string name="today">今日</string>
	<string name="todayClasses1">今天共有</string>
	<string name="toadyClasses2">节课,点击查看&#8230;</string>
	
	<string name="section">节  </string>
	<string name="syncFailure">同步失败</string>
    <string name="syncSuccess">同步成功</string>
    <string name="saveClass">保存课程</string>
	<string name="space">  </string>
	<string name="share">分享我的课表给小伙伴</string>
	<string name="success">同步成功</string>
	<string name="selectClass">选择班级</string>
	<string name="synchronization">同步课程表</string>
	<string name="saveNote">保存笔记</string>
	
	<string name="useNow">立即体验</string>
	
	<string name="pleaseSelect">请选择课程数</string>
	<string name="noClasses">今天没课喔~,尽情潇洒去&#8230;</string>
	<string name="note">笔记</string>
	<string name="homework">作业</string>
	
	<string name="other">其他</string>
	<string name="operate">操作</string>
	
	<string name="placeHint">上课地点</string>
	<string name="teacherHint">老师姓名</string>
	<string name="time_setting">课程时间设置</string>
	<string name="noteHint">记点什么?</string>
	<string name="noteBook">记事本</string>
	<string name="getUserInfoFailure">获取用户信息失败</string>
	<string name="yes">是</string>
	<string name="no">否</string>
	
	<string name="not">不,谢谢</string>
	<string name="networkOff">没有连接网络,在网络连接正常时进行同步,即可获取课程表</string>
	
	<string name="updateNews">更新新闻</string>
	<string name="recevicing">正在获取新闻&#8230;</string>
	<string-array name="A">
	    <item>计算机应用技术</item>
	    <item>软件技术</item>
	    <item>计算机网络技术</item>
	    <item>电气自动化技术</item>
	    <item>动漫设计与制作</item>
	    <item>应用电子技术</item>
	</string-array>
	
	<array name="operations">
	    <item>备份</item>
        <item>恢复</item>
        <item>扫一扫</item>
        <item>输入ID</item>
        <item>退出</item>
	</array>
	
	<string-array name = "dayOfWeek">
	    <item>星期一</item>
	    <item>星期二</item>
	    <item>星期三</item>
	    <item>星期四</item>
	    <item>星期五</item>
	    <item>星期六</item>
	    <item>星期日</item>
	</string-array>
	
	<string-array name="sectionNumber">
	    <item>8</item>
	    <item>9</item>
	    <item>10</item>
	    <item>11</item>
	    <item>12</item>
	    <item>13</item>
	    <item>14</item>
	    <item>15</item>   
	    <item>16</item>
	</string-array>
	
	<string name="loginCase">请选择方式</string>
	<array name="platforms">
	    <item>QQ</item>
        <item>百度</item>
        <item>扫一扫</item>
        <item>输入ID</item>
	</array>
	
	<string name="loginCase2">请登陆</string>
	<array name="platforms2">
	    <item>QQ</item>
        <item>百度</item>
	</array>
	
	<string-array name="B">
	    <item>计算机应用技术</item>
	    <item>软件技术（WEB）</item>
	    <item>软件技术（移动）</item>
	    <item>计算机网络技术</item>
	    <item>电气自动化技术</item>
	    <item>动漫设计与制作</item>
	    <item>应用电子技术</item>
	</string-array>
	
	<string-array name="C">
	    <item>计算机应用技术</item>
	    <item>软件技术</item>
	    <item>计算机网络技术</item>
	    <item>电气自动化技术</item>
	    <item>动漫设计与制作</item>
	    <item>物联网技术</item>
	</string-array>
	
</resources>
